--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -94,24 +94,24 @@
       </div>
     </div>
     <div class="row-fluid">
-      <div class="span3">
+      <div class="span3 left-nav">
 
         <div class="accordion" id="accordion2">
           <div class="accordion-group">
             <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne1">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse1">
                 JavaScript
               </a>
             </div>
-            <div id="collapseOne1" class="accordion-body collapse">
+            <div id="collapse1" class="accordion-body collapse in">
               <div class="accordion-inner">
-                Jquery
+                <a href="/jquery.html">Jquery</a>
               </div>
               <div class="accordion-inner">
-                CoffeeScript
+                <a href="/coffeescript.html">CoffeeScript</a>
               </div>
               <div class="accordion-inner">
-                Backbone
+                <a href="/backbone.html">Backbone</a>
               </div>
             </div>
           </div>
@@ -123,13 +123,13 @@
             </div>
             <div id="collapse2" class="accordion-body collapse">
               <div class="accordion-inner">
-                Bootstrap
+                <a href="/bootstrap.html">Bootstrap</a>
               </div>
               <div class="accordion-inner">
-                Less
+                <a href="/less.html">Less</a>
               </div>
               <div class="accordion-inner">
-                Scss
+                <a href="/sass.html">Sass</a>
               </div>
             </div>
           </div>
@@ -142,10 +142,10 @@
             </div>
             <div id="collapse4" class="accordion-body collapse">
               <div class="accordion-inner">
-                Ruby
+                <a href="/ruby.html">Ruby</a>
               </div>
               <div class="accordion-inner">
-                Rails
+                <a href="/rails.html">Rails</a>
               </div>
             </div>
           </div>
@@ -157,50 +157,52 @@
             </div>
             <div id="collapse5" class="accordion-body collapse">
               <div class="accordion-inner">
-                Java
+                <a href="/java.html">Java</a>
               </div>
               <div class="accordion-inner">
-                SSH
-              </div>
-            </div>
-          </div>
-          <div class="accordion-group">
-            <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse6">
-                数据库
-              </a>
-            </div>
-            <div id="collapse6" class="accordion-body collapse">
-              <div class="accordion-inner">
-                Mysql
-              </div>
-              <div class="accordion-inner">
-                Oracle
-              </div>
-              <div class="accordion-inner">
-                Mongo
+                <a href="/ssh.html">SSH</a>
               </div>
             </div>
           </div>
           <div class="accordion-group">
             <div class="accordion-heading">
               <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse7">
-                人生理想
+                数据库
               </a>
             </div>
             <div id="collapse7" class="accordion-body collapse">
               <div class="accordion-inner">
-                经验
+                <a href="/mysql.html">Mysql</a>
               </div>
               <div class="accordion-inner">
-                感想
+                <a href="/oracle.html">Oracle</a>
+              </div>
+              <div class="accordion-inner">
+                <a href="/mongo.html">Mongo</a>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="accordion-group">
+            <div class="accordion-heading">
+              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse10">
+                人生理想
+              </a>
+            </div>
+            <div id="collapse10" class="accordion-body collapse">
+              <div class="accordion-inner">
+                <a href="/experience.html">经验</a>
+              </div>
+              <div class="accordion-inner">
+                <a href="/impression.html">感想</a>
               </div>
             </div>
           </div>
         </div>
 
       </div>
-      <div class="span9">
+      <div class="span9 main-content">
         <div class="site">
           {{ content }}
         </div>
@@ -208,11 +210,12 @@
     </div>
     <div class="row-fluid">
       <div class="span12">
-        <div class="footer" style="background-color: #f5f5f5;padding: 15px">
+        <div class="footer">
           <div class="contact">
             <p>
               Copyright © 2013<br />
-              Robin2 - z2009zxiaolong@gmail.com
+              自豪地采用<a href="http://www.bootcss.com/">Twitter Bootstrap</a><br />
+              <a href="https://github.com/z2009zxiaolong">Robin2</a> - z2009zxiaolong@gmail.com
             </p>
           </div>
         </div>
