--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,11 @@
 layout: default
 ---
 <h2>{{ page.title }}</h2>
-<p class="meta">{{ page.date | date_to_string }}</p>
+<p>
+	<div class="meta">日期：{{ page.date | date_to_string }}
+		<div class="pull-right">分类：{{ page.categories }}</div>
+	</div>
+</p>
 
 <div class="post">
 {{ content }}
