--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: Robin2's Blog
 ---
 <div id="home">
-  <h1>{{ page.hero-title }}</h1>
+  <h1>{{ page.hero_title }}</h1>
   <ul class="posts">
     分类：{{ page.name }}<br>
 	文章数：{{ site.categories[page.name] | size }}<br>
