--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -60,7 +60,7 @@ ul.posts span {
   font-size: 115%;
   text-align: justify;
   width: 42em;
-  margin: 3em auto 2em;
+  margin: 15px auto 15px;
   line-height: 1.5em; }
 
 .site .header a {
