--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -126,10 +126,7 @@
                 <a href="/bootstrap.html">Bootstrap</a>
               </div>
               <div class="accordion-inner">
-                <a href="/less.html">Less</a>
-              </div>
-              <div class="accordion-inner">
-                <a href="/sass.html">Sass</a>
+                <a href="/effect.html">特效应用</a>
               </div>
             </div>
           </div>
