--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -157,7 +157,7 @@
                 <a href="/java.html">Java</a>
               </div>
               <div class="accordion-inner">
-                <a href="/ssh.html">SSH</a>
+                <a href="/ssh.html">框架应用</a>
               </div>
             </div>
           </div>
