--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -212,7 +212,7 @@
           <div class="contact">
             <p>
               Copyright © 2013<br />
-              Robin2 - z2009zxiaolong@gmail.com
+              蒋志龙 - agilejzl@gmail.com
             </p>
           </div>
         </div>
