--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,13 +1,19 @@
 ---
 layout: default
 ---
+
 <div id="home">
   <h1>{{ page.hero_title }}</h1>
   <ul class="posts">
     分类：{{ page.name }}<br>
-	文章数：{{ site.categories[page.name] | size }}<br>
-	{% for post in site.categories[page.name] %}
-		<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-	{% endfor %}
+    文章数：{{ site.categories[page.name] | size }}<br>
+    {% for post in site.categories[page.name] %}
+      <li>
+        <span>{{ post.date | date_to_string }}</span> &raquo; 
+        <a href="{{ post.url }}">
+          {{ post.title }}
+        </a>
+      </li>
+    {% endfor %}
   </ul>
 </div>
