--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,222 +3,85 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>{{ page.title }}</title>
+  <title>{{page.title}}</title>
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="/assets/css/syntax.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap-responsive.css">
-
-  <script type="text/javascript" src="/assets/js/jquery.js"></script>
-  <script type="text/javascript" src="/assets/js/jquery-ui.js"></script>
-  <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
 </head>
+
 <body>
   <div class="container-fluid">
+    <!-- header -->
     <div class="row-fluid">
       <div class="span12">
         <div class="navbar">
           <div class="navbar-inner">
             <div class="container-fluid">
-               <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="/" class="brand">{{ site.name }}</a>
+              <a href="/" class="brand">{{site.blogtitle}}</a>
               <div class="nav-collapse collapse navbar-responsive-collapse">
                 <ul class="nav">
                   <li class="active">
                     <a href="/">主页</a>
                   </li>
-                  <li>
-                    <a href="#">链接</a>
-                  </li>
-                  <li>
-                    <a href="#">链接</a>
-                  </li>
-                  <li class="dropdown">
-                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">下拉菜单<strong class="caret"></strong></a>
-                    <ul class="dropdown-menu">
-                      <li>
-                        <a href="#">下拉导航1</a>
-                      </li>
-                      <li>
-                        <a href="#">下拉导航2</a>
-                      </li>
-                      <li>
-                        <a href="#">其他</a>
-                      </li>
-                      <li class="divider">
-                      </li>
-                      <li class="nav-header">
-                        标签
-                      </li>
-                      <li>
-                        <a href="#">链接1</a>
-                      </li>
-                      <li>
-                        <a href="#">链接2</a>
-                      </li>
-                    </ul>
-                  </li>
                 </ul>
+
                 <ul class="nav pull-right">
                   <li>
-                    <a href="#">右边链接</a>
+                    <a href="about.html">关于</a>
                   </li>
                   <li class="divider-vertical">
                   </li>
-                  <li class="dropdown">
-                     <a data-toggle="dropdown" class="dropdown-toggle" href="#">下拉菜单<strong class="caret"></strong></a>
-                    <ul class="dropdown-menu">
-                      <li>
-                        <a href="#">下拉导航1</a>
-                      </li>
-                      <li>
-                        <a href="#">下拉导航2</a>
-                      </li>
-                      <li>
-                        <a href="#">其他</a>
-                      </li>
-                      <li class="divider">
-                      </li>
-                      <li>
-                        <a href="#">链接3</a>
-                      </li>
-                    </ul>
-                  </li>
                 </ul>
               </div>
-              
             </div>
           </div>
-          
         </div>
       </div>
     </div>
+
     <div class="row-fluid">
-      <div class="span2 left-nav">
-
-        <div class="accordion" id="accordion2">
-          <div class="accordion-group">
-            <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse1">
-                JavaScript
-              </a>
-            </div>
-            <div id="collapse1" class="accordion-body collapse in">
-              <div class="accordion-inner">
-                <a href="/jquery.html">Jquery</a>
-              </div>
-              <div class="accordion-inner">
-                <a href="/coffeescript.html">CoffeeScript</a>
-              </div>
-              <div class="accordion-inner">
-                <a href="/backbone.html">Backbone</a>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-group">
-            <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse2">
-                Html
-              </a>
-            </div>
-            <div id="collapse2" class="accordion-body collapse">
-              <div class="accordion-inner">
-                <a href="/bootstrap.html">Bootstrap</a>
-              </div>
-              <div class="accordion-inner">
-                <a href="/effect.html">特效应用</a>
-              </div>
-            </div>
-          </div>
-          
-          <div class="accordion-group">
-            <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse4">
-                Ruby&Rails
-              </a>
-            </div>
-            <div id="collapse4" class="accordion-body collapse">
-              <div class="accordion-inner">
-                <a href="/ruby.html">Ruby</a>
-              </div>
-              <div class="accordion-inner">
-                <a href="/rails.html">Rails</a>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-group">
-            <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse5">
-                Java&SSH
-              </a>
-            </div>
-            <div id="collapse5" class="accordion-body collapse">
-              <div class="accordion-inner">
-                <a href="/java.html">Java</a>
-              </div>
-              <div class="accordion-inner">
-                <a href="/ssh.html">框架应用</a>
-              </div>
-            </div>
-          </div>
-          <div class="accordion-group">
-            <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse7">
-                数据库
-              </a>
-            </div>
-            <div id="collapse7" class="accordion-body collapse">
-              <div class="accordion-inner">
-                <a href="/mysql.html">Mysql</a>
-              </div>
-              <div class="accordion-inner">
-                <a href="/oracle.html">Oracle</a>
-              </div>
-              <div class="accordion-inner">
-                <a href="/mongo.html">Mongo</a>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="accordion-group">
-            <div class="accordion-heading">
-              <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapse10">
-                人生理想
-              </a>
-            </div>
-            <div id="collapse10" class="accordion-body collapse">
-              <div class="accordion-inner">
-                <a href="/experience.html">经验</a>
-              </div>
-              <div class="accordion-inner">
-                <a href="/impression.html">感想</a>
-              </div>
-            </div>
-          </div>
+      <!-- left_sidebar -->
+      <div class="span3 left-nav">
+        <div class="content">
+          <h2>
+            做自己喜欢的事
+          </h2>
+          <a href="/">
+            <img class="my_photo" src="/assets/img/my_photo.jpg" alt="{{site.username}}">
+          </a>
         </div>
-
       </div>
-      <div class="span10 main-content">
+
+      <!-- right_sidebar -->
+      <div class="span9 main-content">
         <div class="site">
           {{ content }}
         </div>
       </div>
     </div>
+
+    <!-- footer -->
     <div class="row-fluid">
       <div class="span12">
         <div class="footer">
           <div class="contact">
             <p>
-              Copyright © 2014<br />
-              自豪地采用<a target="_blank" href="http://www.bootcss.com/">Twitter Bootstrap</a><br />
-              <a target="_blank" href="https://github.com/agilejzl">我的Github主页</a>
-              蒋志龙  agilejzl@gmail.com
+              Copyright ©2014<br />
+              <address>
+                <strong>{{site.username}}</strong> - 
+                <a href="mailto:{{site.username}}">{{site.useremail}}</a>
+              </address>
             </p>
           </div>
         </div>
       </div>
     </div>
   </div>
-  </body>
+
+  <script type="text/javascript" src="/assets/js/jquery.js"></script>
+  <script type="text/javascript" src="/assets/js/jquery-ui.js"></script>
+  <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
+</body>
 </html>
