--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,7 +40,7 @@ table {
 /*
 /*****************************************************************************/
 ul.posts {
-  list-style-type: none;
+  list-style-type: disc;
   margin-bottom: 2em; }
 
 ul.posts li {
@@ -152,3 +152,23 @@ ul.posts span {
   background-color: #fafafa;
   margin-bottom: 15px;
   border: 1px solid #d4d4d4; }
+
+.left-nav {
+  background-color: #f5f5f5;
+  margin-bottom: 2px;
+  border: 1px solid #e5e5e5;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;  
+}
+
+img.my_photo {
+  width: 80%; 
+  height: 80%;
+  margin: 10px 0px;
+}
+
+.content {
+  padding: 5px;
+}
+
