--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,10 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{page.title}}</title>
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="/assets/css/syntax.css">
-  <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
-  <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap-responsive.css">
+  <link rel="stylesheet" type="text/css" href="{{site.assets_css}}/syntax.css">
+  <link rel="stylesheet" type="text/css" href="{{site.assets_css}}/main.css">
+  <link rel="stylesheet" type="text/css" href="{{site.assets_css}}/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="{{site.assets_css}}/bootstrap-responsive.css">
 </head>
 
 <body>
@@ -80,8 +80,10 @@
     </div>
   </div>
 
-  <script type="text/javascript" src="/assets/js/jquery.js"></script>
-  <script type="text/javascript" src="/assets/js/jquery-ui.js"></script>
-  <script type="text/javascript" src="/assets/js/bootstrap.js"></script>
+  <script type="text/javascript" src="{{site.assets_js}}/jquery.js"></script>
+  <script type="text/javascript" src="{{site.assets_js}}/bootstrap.js"></script>
+  <script type="text/javascript" src="{{site.assets_js}}/underscore.js"></script>
+  <script type="text/javascript" src="{{site.assets_js}}/backbone.js"></script>
+  <script type="text/javascript" src="{{site.assets_js}}/main.js"></script>
 </body>
 </html>
