--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -9,7 +9,7 @@ layout: default
     文章数：{{ site.categories[page.name] | size }}<br>
     {% for post in site.categories[page.name] %}
       <li>
-        <span>{{ post.date | date_to_string }}</span> &raquo; 
+        <span>{{ post.date | date: "%Y-%m-%d" }}</span> &raquo; 
         <a href="{{ post.url }}">
           {{ post.title }}
         </a>
