--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
       <!-- left_sidebar -->
       <div class="span3 left-nav">
         <div class="row-fluid content">
-          <h2>{{site.blogmotto}}</h2>
+          <h3>{{site.blogmotto}}</h3>
           <a target="_blank" href="{{site.aboutsite}}">
             <img class="my_photo" src="/assets/img/my_photo.jpg" alt="{{site.username}}">
           </a>
@@ -56,7 +56,7 @@
 
         <div class="row-fluid newer_posts">
           <div class="row-fluid">
-            <h3 class="">最近的文章</h3>
+            <h4 class="">Recently posts</h4>
           </div>
           <ul class="posts">
             {% for post in site.categories['newest'] %}
