--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" type="text/css" href="{{site.assets_css}}/main.css">
   <link rel="stylesheet" type="text/css" href="{{site.assets_css}}/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="{{site.assets_css}}/bootstrap-responsive.css">
+
+  <script type="text/javascript" src="{{site.assets_js}}/jquery.js"></script>
+  <script type="text/javascript" src="{{site.assets_js}}/bootstrap.js"></script>
+  <script type="text/javascript" src="{{site.assets_js}}/underscore.js"></script>
+  <script type="text/javascript" src="{{site.assets_js}}/backbone.js"></script>
+  <script type="text/javascript" src="{{site.assets_js}}/main.js"></script>
 </head>
 
 <body>
@@ -41,6 +47,7 @@
       </div>
     </div>
 
+    <!-- main -->
     <div class="row-fluid">
       <!-- left_sidebar -->
       <div class="span3 left-nav">
@@ -95,11 +102,5 @@
       </div>
     </div>
   </div>
-
-  <script type="text/javascript" src="{{site.assets_js}}/jquery.js"></script>
-  <script type="text/javascript" src="{{site.assets_js}}/bootstrap.js"></script>
-  <script type="text/javascript" src="{{site.assets_js}}/underscore.js"></script>
-  <script type="text/javascript" src="{{site.assets_js}}/backbone.js"></script>
-  <script type="text/javascript" src="{{site.assets_js}}/main.js"></script>
 </body>
 </html>
