--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,11 @@
 
         <div class="row-fluid newer_posts">
           <div class="row-fluid">
-            <h4 class="">Recently posts</h4>
+            <h4 class="">
+              <a href="{{ site.categories_path }}/newest.html">
+                 Recently posts
+              </a>
+            </h4>
           </div>
           <ul class="posts">
             {% for post in site.categories['newest'] %}
