--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,18 @@
 ---
 layout: default
 ---
+
 <h2>{{ page.title }}</h2>
 <p>
   <div class="meta">
-  	日期: {{ page.date | date: "%Y-%m-%d" }}
+    日期: {{ page.date | date: "%Y-%m-%d" }}
     <div class="pull-right">
       分类: 
       {% for category in page.categories %}
         {% unless category == 'posts' %}
-          {{ category | capitalize }} 
+          <a href="{{ site.categories_path }}/{{ category }}.html">
+            {{ category | capitalize }}
+          </a>
         {% endunless %}
       {% endfor %}
     </div>
